tests/unary/unary.exp
Error ------------------------------------------------------------ unary.js:8:10

string is not a number.


Error ----------------------------------------------------------- unary.js:12:11

string is incompatible with number.


Error ------------------------------------------------------------ unary.js:19:2

Cannot cast `-1` to undefined because number is incompatible with undefined.


Error ----------------------------------------------------------- update.js:12:5

Cannot perform arithmetic operation because string is not a number.


Error ----------------------------------------------------------- update.js:12:5

Cannot assign number to `y` because number is incompatible with string.


Error ----------------------------------------------------------- update.js:14:5

Cannot assign number to `y` because number is incompatible with string.


Error ----------------------------------------------------------- update.js:18:5

Cannot perform arithmetic operation because string is not a number.


Error ----------------------------------------------------------- update.js:18:5

Cannot assign number to `y` because number is incompatible with string.


Error ----------------------------------------------------------- update.js:22:5

Cannot assign number to `y` because number is incompatible with string.


Error ----------------------------------------------------------- update.js:22:7

Cannot perform arithmetic operation because string is not a number.


Error ----------------------------------------------------------- update.js:26:5

Cannot assign number to `y` because number is incompatible with string.


Error ----------------------------------------------------------- update.js:26:7

Cannot perform arithmetic operation because string is not a number.


Error ----------------------------------------------------------- update.js:31:5

Cannot reassign constant `y`.


Error ----------------------------------------------------------- update.js:32:5

Cannot reassign constant `y`.



Found 14 errors
